fix(audio-reader): adjust pointer events and z-index for controls
- Set pointer-events to none for background to allow click-through.
- Enable pointer-events for controls to ensure user interactions.
- Adjust z-index for background to prevent interference with controls.
- Update highlight tolerance values for better word index alignment.

--- a/components/audio-reader/styles.module.css
+++ b/components/audio-reader/styles.module.css
@@ -123,6 +123,7 @@
   justify-content: center;
   width: 100%;
   height: 256px;
+  pointer-events: none;
   transform: translateX(-50%);
 
   .controls {
@@ -136,6 +137,7 @@
     width: 768px;
     height: 48px;
     padding: 12px;
+    pointer-events: auto;
     background: var(--gray-a6);
     border-radius: 16px;
     box-shadow: 0 8px 16px 0px rgba(0, 0, 0, 0.1);
@@ -146,8 +148,12 @@
   .background {
     position: fixed;
     bottom: 0;
+    /* allow click through */
+    z-index: -1;
     width: 100%;
     height: 256px;
+    /* disable interactions */
+    pointer-events: none;
 
     .blur {
       width: 100%;
